--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -68,3 +68,30 @@
         display: none;
     }
 }
+
+
+@media (max-width: 1024px){
+    .btn-menu{
+        font-size: 22px;
+    }
+    .container{
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .plano3{
+        margin-top: -30px;
+    }
+    .plano2{
+        order:-1;
+        padding-right: 2em;
+    }
+    .card{
+        margin-bottom: 20%;
+        width: 80%;
+    }
+    #img{
+        display: none;
+    }
+}
